third_party/WebKit/LayoutTests/fast/js/resources/reparsing-semicolon-insertion.js
@@ -1,0 +1,26 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+description(
+"This test checks that automatic semicolon insertion for parsing and reparsing agree. In a debug build, this test will fail with an assertion failure if they do not."
+);
+
+// According to the ECMA spec, these should all be syntax errors. However, the
+// pre-existing behaviour of JavaScriptCore has always been to accept them. If
+// JavaScriptCore is changed so that these are syntax errors in the future, then
+// this test can simply be changed to reflect that.
+
+// It is important that the closing braces be on the same line as the commas, so
+// that a newline doesn't act as a terminator when lexing inbetween.
+
+function commaTest() { a = 1, }
+
+shouldBeUndefined("commaTest()");
+
+function varCommaTest() { var a = 1, }
+
+shouldBeUndefined("varCommaTest()");
+
+function constCommaTest() { const a = 1, }
+
+shouldBeUndefined("constCommaTest()");
+
+var successfullyParsed = true;
